--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "@elgorditosalsero/react-gtm-hook": "^2.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-gtm-module": "^2.0.11"
+    "react-gtm-module": "^2.0.11",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "react-error-overlay": "^6.0.9",
     "vite": "^5.1.6"
   }
 }
