--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@elgorditosalsero/react-gtm-hook": "^2.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-gtm-module": "^2.0.11",
     "react-scripts": "^5.0.1"
   },
